--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,21 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.7.1</version>
+</dependency>  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.11</version>
@@ -53,7 +59,24 @@
 <dependency>
     <groupId>info.cukes</groupId>
     <artifactId>cucumber-picocontainer</artifactId>
-    <version>1.2.2</version>
-</dependency>    
-  </dependencies>
+    <version>1.2.5</version>
+</dependency>
+</dependencies>
+<build>
+<plugins>
+<plugin>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.1</version>
+<configuration>
+<source>1.7</source>
+<target>1.7</target>
+<resources>
+<directory>src/test/resources</directory>
+<includes><include>**/*.*</include>
+</includes>
+</resources>
+</configuration>
+</plugin>
+</plugins>
+</build>
 </project>
